# aoc-2025

./: README.md
chris/: .gitignore  LICENSE  README.md  open_workspace.sh
chris/day01/: Cargo.toml
chris/day01/src/: main.rs
chris/day02/: Cargo.toml
chris/day02/src/: main.rs
chris/day03/: Cargo.toml
chris/day03/src/: main.rs
chris/day04/: Cargo.toml
chris/day04/.zed/: settings.json
chris/day04/src/: main.rs
chris/day05/: Cargo.toml
chris/day05/src/: main.rs
chris/day06/: Cargo.toml  clippy.toml
chris/day06/src/: main.rs
chris/day07/: Cargo.toml
chris/day07/src/: main.rs
chris/day08/: Cargo.toml  clippy.toml
chris/day08/src/: main.rs
chris/day09/: Cargo.toml
chris/day09/src/: main.rs
chris/day10/: Cargo.toml
chris/day10/.zed/: settings.json
chris/day10/src/: main.rs
chris/day11/: Cargo.toml
chris/day11/src/: main.rs
chris/day12/: Cargo.toml
chris/day12/src/: main.rs
palasso/: .gitignore  cli.py
palasso/day01/: part1.py  part2.py
palasso/day02/: part1.py  part2.py
palasso/day03/: part1.py  part2.py
palasso/day04/: part1.py  part2.py
palasso/day05/: part1.py  part2.py
palasso/day06/: part1.py  part2.py
palasso/day07/: part1.py  part2.py
palasso/day08/: part1.py  part2.py
palasso/day09/: part1.py  part2.py
palasso/day10/: part1.py  part2.py
palasso/day11/: part1.py  part2.py
palasso/day12/: part1.py
pedro/day01/: rotate.rb
pedro/day02/: gift_shop.rb
pedro/day03/: lobby.rb
pedro/day04/: rolls.rb
pedro/day05/: ingredients.rb
pedro/day06/: cephalopod.rb  cephalopod_p2.rb
pedro/day07/: smoke.rb  smoke_p2.rb
stefan/: .gitignore  justfile
stefan/day01/: CMakeLists.txt  build.zig.zon
stefan/day01/src/: main.cpp
stefan/day02/: CMakeLists.txt
stefan/day02/src/: main.cpp
stefan/day03/: CMakeLists.txt
stefan/day03/src/: main.cpp
stefan/day04/: CMakeLists.txt
stefan/day04/src/: main.cpp
stefan/day05/: CMakeLists.txt
stefan/day05/src/: main.cpp
stefan/day06/: CMakeLists.txt
stefan/day06/src/: main.cpp
stefan/day07/: CMakeLists.txt
stefan/day07/src/: main.cpp
