[package]
authors = ["Christopher Schölzel"]
name = "day01"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE"
publish = false # prevent accidentally publishing the package

[dependencies]

[workspace.lints.clippy]
# Extremely pedantic clippy lints workspace-wide - maximum annoyance!
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
# Specific high-priority lints - deny the worst offenders
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
missing_docs_in_private_items = "warn"
